--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>EDA Board</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-lr4jv1mywzr0t6q51fgbhldzdj81yxsyzb5lqob6kazfjkfasdof+hawhesii7hb" crossorigin="anonymous">
+
+
   </head>
   <body>
     <div id="root"></div>
